--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ FROM python:3.10
 # Set the working directory in the container to /app
 WORKDIR /app
 
-ADD requirements.txt /app
+ADD ./requirements.txt /app
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
