--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 name: remote ssh command
-on: [push]
+on: [push, workflow_dispatch]
 jobs:
-
   build:
+    environment: 1
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: executing remote ssh commands using password
+    - name: Deploy
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.HOST }}
