--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,20 @@ services:
 
   backend:
     build: ./backend
-    # command: python manage.py runserver 0.0.0.0:8000
     command: gunicorn --bind 0.0.0.0:8000 --workers 2 core.wsgi:application 
     container_name: ezgame_backend
     volumes:
       - ./backend/.db:/app/.db
+
+  backend2:
+    build: ./backend
+    command: python manage.py runserver 0.0.0.0:8000
+    container_name: ezgame_backend2
+    volumes:
+      - ./backend/.db:/app/.db
     ports:
       - "8000:8000"
-
+    
   nginx_proxy_manager:
     image: 'jc21/nginx-proxy-manager:latest'
     restart: unless-stopped
